# api/controllers/cat_controller.js
@@ -105,6 +105,18 @@ const get_training_status = async(req, res) => {
     }
 }
 
+let alter_boost = async (req, res) => {
+    try {
+        let params = req.swagger.params.data.value;
+
+        let result = await categorize.alter_boost(params);
+        return response_utils.send(res, result);
+    }
+    catch(e) {
+        return response_utils.send_error(res, errors.internal_server_error(e))
+    }
+}
+
 let predict = async (req, res) => {
     try {
         let params = {
@@ -114,6 +126,44 @@ let predict = async (req, res) => {
         }
 
         let result = await categorize.predict(params);
+        return response_utils.send(res, result);
+    }
+    catch(e) {
+        return response_utils.send_error(res, errors.internal_server_error(e))
+    }
+}
+
+const predict_document = async (req, res) => {
+    try {
+        let file = req.files.attachment[0];
+        
+        let params = {};
+        for ( let key in req.swagger.params ) {
+            if ( req.swagger.params[key].value ) {
+                params[key] = req.swagger.params[key].value;
+            }
+        }
+
+        let result = await categorize.predict_file(file, params);
+        return response_utils.send(res, result);
+    }
+    catch(e) {
+        return response_utils.send_error(res, errors.internal_server_error(e))
+    }
+}
+
+const predict_email = async (req, res) => {
+    try {
+        let file = req.files.attachment[0];
+        
+        let params = {};
+        for ( let key in req.swagger.params ) {
+            if ( req.swagger.params[key].value ) {
+                params[key] = req.swagger.params[key].value;
+            }
+        }
+
+        let result = await categorize.predict_file(file, params);
         return response_utils.send(res, result);
     }
     catch(e) {
@@ -152,5 +202,9 @@ const evaluate = async(req, res) => {
 }
 
 module.exports = {
-    test, create, configure_domain, add_training_data, add_training_data_attachment, add_training_data_email, train, get_training_status, predict, confusion_matrix, evaluate
+    test, create, configure_domain, 
+    add_training_data, add_training_data_attachment, add_training_data_email, 
+    train, get_training_status, alter_boost, 
+    predict, predict_document, predict_email,
+    confusion_matrix, evaluate
 }
